--- a/FXExperienceTools/src/com/fxexperience/tools/caspianstyler/CaspianStylerMainFrame.fxml
+++ b/FXExperienceTools/src/com/fxexperience/tools/caspianstyler/CaspianStylerMainFrame.fxml
@@ -30,14 +30,13 @@
 <?stylesheet true:CaspianStyler.css?>
 <?stylesheet true:../Tools.css?>
 
-
 <SplitPane dividerPositions="0.5" styleClass="split-pane-caspian" stylesheets="@CaspianStyler_dark.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fxexperience.tools.caspianstyler.CaspianStylerMainFrame">
   <items>
-    <AnchorPane>
+    <AnchorPane SplitPane.resizableWithParent="false">
          <children>
-          <StackPane id="ContentArea" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+          <StackPane id="ContentArea" prefHeight="800.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-              <GridPane id="ContentPanel" fx:id="contentPanel" hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0">
+              <GridPane id="ContentPanel" fx:id="contentPanel" hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" vgap="10.0" StackPane.alignment="CENTER">
                 <children>
                   <Button id="button1" text="Button" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
                   <ToggleButton id="toggleButton1" text="ToggleButton" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="0" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
@@ -56,7 +55,7 @@
                            </GridPane.margin>
                         </RadioButton>
                   <CheckBox id="checkBox2" indeterminate="true" selected="true" text="CheckBox" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER" />
-                  <RadioButton id="radioButton2" selected="true" text="RadioButton" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.vgrow="NEVER" />
+                  <RadioButton id="radioButton2" selected="true" text="RadioButton" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER" />
                   <ToggleButton id="toggleButton2" selected="true" text="ToggleButton" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER" />
                   <CheckBox id="checkBox3" selected="true" text="CheckBox" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="NEVER" />
                   <MenuButton id="menuButton1" text="MenuButton" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="3">
@@ -104,36 +103,36 @@
                   <Slider id="sliderVertical1" orientation="VERTICAL" prefHeight="60.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="4" GridPane.vgrow="NEVER" />
                   <Slider id="sliderHorizontal1" prefWidth="130.0" GridPane.columnIndex="0" GridPane.hgrow="NEVER" GridPane.rowIndex="4" GridPane.vgrow="NEVER">
                            <GridPane.margin>
-                              <Insets left="5.0" />
+                              <Insets left="10.0" />
                            </GridPane.margin>
                         </Slider>
                   <ScrollBar id="scrollBarHorizontal1" maxWidth="-Infinity" prefWidth="100.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="4" GridPane.vgrow="NEVER" />
                   <ScrollBar id="scrollBarVertical1" orientation="VERTICAL" prefHeight="60.0" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="4" GridPane.vgrow="NEVER" />
                   <TextField id="textField1" maxHeight="-Infinity" text="TextField" GridPane.columnIndex="0" GridPane.hgrow="NEVER" GridPane.rowIndex="5" GridPane.vgrow="NEVER">
                            <GridPane.margin>
-                              <Insets left="5.0" />
+                              <Insets left="10.0" />
                            </GridPane.margin>
                         </TextField>
                   <PasswordField id="passwordField1" maxHeight="-Infinity" text="Password" GridPane.columnIndex="1" GridPane.hgrow="NEVER" GridPane.rowIndex="5" GridPane.vgrow="NEVER" />
                   <TextArea id="textArea1" prefHeight="50.0" prefWidth="140.0" text="TextArea" wrapText="true" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.hgrow="NEVER" GridPane.rowIndex="5" GridPane.vgrow="NEVER">
                            <GridPane.margin>
-                              <Insets bottom="5.0" right="5.0" />
+                              <Insets bottom="10.0" right="25.0" />
                            </GridPane.margin>
                         </TextArea>
                 </children>
                 <columnConstraints>
-                  <ColumnConstraints hgrow="NEVER" maxWidth="160.0" minWidth="160.0" prefWidth="160.0" />
-                  <ColumnConstraints hgrow="NEVER" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" />
-                  <ColumnConstraints hgrow="NEVER" maxWidth="160.0" minWidth="160.0" prefWidth="160.0" />
-                  <ColumnConstraints hgrow="NEVER" maxWidth="220.0" minWidth="220.0" />
+                  <ColumnConstraints hgrow="NEVER" maxWidth="180.0" minWidth="180.0" prefWidth="180.0" />
+                  <ColumnConstraints hgrow="NEVER" maxWidth="140.0" minWidth="140.0" prefWidth="140.0" />
+                  <ColumnConstraints hgrow="NEVER" maxWidth="190.0" minWidth="190.0" prefWidth="190.0" />
+                  <ColumnConstraints hgrow="NEVER" maxWidth="240.0" minWidth="240.0" prefWidth="240.0" />
                 </columnConstraints>
                 <rowConstraints>
-                  <RowConstraints vgrow="NEVER" />
-                  <RowConstraints vgrow="NEVER" />
-                  <RowConstraints vgrow="NEVER" />
-                  <RowConstraints vgrow="NEVER" />
-                  <RowConstraints vgrow="NEVER" />
-                  <RowConstraints vgrow="NEVER" />
+                  <RowConstraints minHeight="50.0" vgrow="NEVER" />
+                  <RowConstraints minHeight="50.0" vgrow="NEVER" />
+                  <RowConstraints minHeight="40.0" vgrow="NEVER" />
+                  <RowConstraints minHeight="50.0" vgrow="NEVER" />
+                  <RowConstraints minHeight="90.0" vgrow="NEVER" />
+                  <RowConstraints minHeight="120.0" vgrow="NEVER" />
                 </rowConstraints>
                      <StackPane.margin>
                         <Insets left="20.0" right="10.0" />
@@ -143,9 +142,9 @@
           </StackPane>
          </children>
       </AnchorPane>
-    <AnchorPane>
+    <AnchorPane minWidth="350.0">
          <children>
-          <GridPane id="PropertiesPanel" fx:id="propertiesPanel" hgap="2.0" vgap="2.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+          <GridPane id="PropertiesPanel" fx:id="propertiesPanel" hgap="2.0" maxWidth="330.0" minWidth="330.0" prefWidth="330.0" vgap="2.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
               <Label id="label2" maxWidth="5000.0" styleClass="title" text="Text" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0">
                      <GridPane.margin>
@@ -182,8 +181,8 @@
               <CheckBox fx:id="fontDefaultCheckBox" minWidth="-Infinity" selected="true" styleClass="check-box-prop" text="Default" GridPane.columnIndex="2" GridPane.rowIndex="1" />
               <HBox alignment="CENTER" spacing="10.0" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="10">
                 <children>
-                  <Button fx:id="copyCSS" styleClass="big-button" text="Copy Stylesheet" HBox.hgrow="NEVER" />
-                  <Button fx:id="saveCSS" alignment="CENTER_RIGHT" styleClass="big-button" text="Save Stylesheet" HBox.hgrow="NEVER" />
+                  <Button fx:id="copyCSS" prefHeight="50.0" prefWidth="180.0" styleClass="big-button" text="Copy Stylesheet" HBox.hgrow="NEVER" />
+                  <Button fx:id="saveCSS" alignment="CENTER" prefHeight="50.0" prefWidth="180.0" styleClass="big-button" text="Save Stylesheet" HBox.hgrow="NEVER" />
                 </children>
               </HBox>
               <TabPane styleClass="floating" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="100.0" tabMaxWidth="100.0" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.hgrow="NEVER" GridPane.rowIndex="8">
@@ -224,7 +223,7 @@
                             </children>
                           </HBox>
                           <Label minWidth="-Infinity" styleClass="prop" text="Gradient:" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="11" />
-                          <CheckBox fx:id="textColorAutoComboBox" selected="true" styleClass="check-box-prop" text="Auto" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                          <CheckBox fx:id="textColorAutoComboBox" selected="true" styleClass="check-box-prop" text="Auto" GridPane.columnIndex="2" GridPane.hgrow="NEVER" GridPane.rowIndex="2">
                                        <GridPane.margin>
                                           <Insets right="10.0" />
                                        </GridPane.margin>
@@ -235,7 +234,7 @@
                                        </GridPane.margin>
                                     </ComboBox>
                           <Label styleClass="prop" text="Field Text:" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
-                          <CheckBox fx:id="fieldTextAutoCheckBox" selected="true" styleClass="check-box-prop" text="Auto" GridPane.columnIndex="2" GridPane.rowIndex="6">
+                          <CheckBox fx:id="fieldTextAutoCheckBox" selected="true" styleClass="check-box-prop" text="Auto" GridPane.columnIndex="2" GridPane.hgrow="NEVER" GridPane.rowIndex="6">
                                        <GridPane.margin>
                                           <Insets right="10.0" />
                                        </GridPane.margin>
@@ -245,7 +244,7 @@
                                           <Insets left="3.0" />
                                        </GridPane.margin>
                                     </Label>
-                          <CheckBox fx:id="bkgdTextColorAutoComboBox" selected="true" styleClass="check-box-prop" text="Auto" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                          <CheckBox fx:id="bkgdTextColorAutoComboBox" selected="true" styleClass="check-box-prop" text="Auto" GridPane.columnIndex="2" GridPane.hgrow="NEVER" GridPane.rowIndex="4">
                                        <GridPane.margin>
                                           <Insets right="10.0" />
                                        </GridPane.margin>
