--- a/FXExperienceControls/src/main/resources/styles/ColorPicker_1.css
+++ b/FXExperienceControls/src/main/resources/styles/ColorPicker_1.css
@@ -29,18 +29,33 @@
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-.button {
-    -fx-min-width: 30;
-    -fx-max-width: 30;
-    -fx-min-height: 30;
-    -fx-min-height: 30;
+.small-label {
+    -fx-font-size: 0.750em;
+    -fx-padding: 0;
 }
-.rotation-dial {
-    -fx-background-radius: 100;
+.chip-background {
+    -fx-border-color: -fx-box-border, white;
+    -fx-border-insets: 0, 1;
+    -fx-background-color: white;
+    -fx-background-image: url("/images/chequers.png");
+    -fx-background-position: center;
 }
-.rotation-handle {
-    -fx-background-color: null;
-    -fx-background-image: url("/resources/images/rotate-handle.png");
-    -fx-background-repeat: no-repeat;
-    -fx-background-position: right;
+.hue-slider {
+    -fx-background-insets: 0 4 0 4;
+    -fx-background-radius: 0;
+}
+.theme-presets .property-sheet .slider > .track {
+    -fx-background-color: transparent;
+}
+/* opacity slider background is applied to a region behind the slider itself */
+.opacity-slider-background {
+    -fx-background-image: url("/images/chequers.png");
+    -fx-background-position: left center;
+    -fx-background-radius: 0;
+}
+.brightnessRect {
+    -fx-background-color: linear-gradient(to bottom, transparent, black);
+}
+.saturationRect {
+    -fx-background-color: linear-gradient(to bottom right, white, transparent);
 }
