--- a/FXExperienceControls/src/main/resources/styles/RotatorControl.css
+++ b/FXExperienceControls/src/main/resources/styles/RotatorControl.css
@@ -29,27 +29,18 @@
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-.root {
-    -sb-base: rgb(147, 147, 147);
-     -sb-content-text-dimmed: derive(-sb-base, 25%);
-      -sb-content-background: derive(-sb-base, -32%);
-      -fx-focus-color: transparent;
+.button {
+    -fx-min-width: 30;
+    -fx-max-width: 30;
+    -fx-min-height: 30;
+    -fx-min-height: 30;
 }
-.small-label {
-    -fx-font-size: 0.750em;
-    -fx-text-fill: derive(rgb(147, 147, 147), 25%);
-    -fx-padding: 0;
+.rotation-dial {
+    -fx-background-radius: 100;
 }
-
-.gradient-background {
-    -fx-border-color: -fx-box-border, white;
-    -fx-border-insets: 0, 1;
-    -fx-background-color: white;
-    -fx-background-image: url("/resources/images/chequers.png");
-    -fx-background-position: center;
-}
-
-.track-background {
-    -fx-background-color: derive(rgb(147, 147, 147), -35%), derive(rgb(147, 147, 147), 32%);
-    -fx-background-insets: 0, 1;
+.rotation-handle {
+    -fx-background-color: null;
+    -fx-background-image: url("/images/rotate-handle.png");
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: right;
 }
