--- a/FXExperienceTools/src/main/resources/styles/main.css
+++ b/FXExperienceTools/src/main/resources/styles/main.css
@@ -135,22 +135,22 @@ different terms and without source code for the larger work.
 .switch .box{
     -fx-background-color: transparent;
     -fx-padding: 16 53 0 0;
-    -fx-background-image: url("/resources/images/off.png");
+    -fx-background-image: url("/images/off.png");
 }
 .switch:selected .box {
     -fx-background-color: transparent;
-    -fx-background-image: url("/resources/images/on.png");
+    -fx-background-image: url("/images/on.png");
 }
 .switch:focused .box{
     -fx-background-color: -fx-focus-color;
     -fx-padding: 16 53 0 0;
-    -fx-background-image: url("/resources/images/off.png");   
+    -fx-background-image: url("/images/off.png");   
     -fx-background-insets: -1.4;
     -fx-background-radius: 3;
 }
 .switch:focused:selected .box {
     -fx-background-color: -fx-focus-color;
-    -fx-background-image: url("/resources/images/on.png");    
+    -fx-background-image: url("/images/on.png");    
     -fx-background-insets: -1.4;
     -fx-background-radius: 4;
 }
