--- a/FXExperienceTools/src/main/resources/styles/styler.css
+++ b/FXExperienceTools/src/main/resources/styles/styler.css
@@ -17,8 +17,11 @@ different terms and without source code for the larger work.
     -fx-padding: 3 3 3 3;
 
 }
-.border-pane-styler {
-    -fx-background-color: transparent;
+anchor-pane {
+     -fx-background-color: derive(rgb(147, 147, 147), -60%); 
+}
+accordian-prop .titled-pane {
+     -fx-background-color: derive(rgb(147, 147, 147), -60%); 
 }
 
 .split-pane-caspian:horizontal {
@@ -81,6 +84,11 @@ different terms and without source code for the larger work.
   -fx-border-color: transparent;
     
 }
+.titled-pane .content {
+  -fx-background-color: derive(rgb(122, 122, 122), -43%);
+  -fx-border-color: transparent;
+    
+}
 .titled-pane .context-menu {
      -fx-background-color: derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), 40%), rgb(147, 147, 147);
 }
@@ -98,7 +106,6 @@ different terms and without source code for the larger work.
 }
 
 .sub-title {
-   
      -fx-text-fill: derive(rgb(147, 147, 147), 85%);
     -fx-font-size: 0.875em;
     -fx-border-width: 0.5 0 0.5 0;
@@ -236,22 +243,22 @@ different terms and without source code for the larger work.
 .auto-switch .box{
     -fx-background-color: transparent;
     -fx-padding: 16 53 0 0;
-    -fx-background-image: url("/resources/images/on.png");
+    -fx-background-image: url("/images/on.png");
 }
 .auto-switch:selected .box {
     -fx-background-color: transparent;
-    -fx-background-image: url("/resources/images/off.png");
+    -fx-background-image: url("/images/off.png");
 }
 .auto-switch:focused .box{
     -fx-background-color: -fx-focus-color;
     -fx-padding: 16 53 0 0;
-    -fx-background-image: url("/resources/images/on.png");   
+    -fx-background-image: url("/images/on.png");   
     -fx-background-insets: -1.4;
     -fx-background-radius: 3;
 }
 .auto-switch:focused:selected .box {
     -fx-background-color: -fx-focus-color;
-    -fx-background-image: url("/resources/images/off.png");    
+    -fx-background-image: url("/images/off.png");    
     -fx-background-insets: -1.4;
     -fx-background-radius: 4;
 }
