--- a/FXExperienceTools/src/main/resources/styles/derivation.css
+++ b/FXExperienceTools/src/main/resources/styles/derivation.css
@@ -11,7 +11,7 @@ different terms and without source code for the larger work.
     Author     : andje22
 */
 .derivation-root {
-    -fx-background-image: url("/resources/images/dirtyshirt.png");
+    -fx-background-image: url("/images/dirtyshirt.png");
     -fx-background: black;
 }
 
