--- a/FXExperienceTools/src/main/resources/styles/spline.css
+++ b/FXExperienceTools/src/main/resources/styles/spline.css
@@ -14,12 +14,26 @@ different terms and without source code for the larger work.
     -fx-background: black;
 }
 #Background {
-    -fx-background-image: url("/resources/images/darkdenim.png");
+    
+    -fx-background-image: url("/images/darkdenim.png");
     -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.4) , 80, 0.0 , 0 , 0 );
 }
 #CodeLabel {
     -fx-font-family: "Courier New";
     -fx-font-size: 16px;
+}
+.big-button {
+    -fx-text-fill: white;
+    -fx-font-family: "Arial Narrow";
+    -fx-font-weight: bold;
+    -fx-background-color: linear-gradient(#61a2b1, #2A5058);
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+}
+.big-button:hover {
+    -fx-background-color: linear-gradient(#2A5058, #61a2b1);
+}
+.big-button Text {
+    -fx-effect: dropshadow( one-pass-box , rgba(255,255,255,0.6) , 0, 0.0 , 0 , 1 );
 }
 .chart-plot-background {
     -fx-background-color: rgba(255,255,255,0.05);
