--- a/FXExperienceTools/src/main/resources/fxml/FXMLDerivationPanel.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLDerivationPanel.fxml
@@ -15,7 +15,7 @@
     <GridPane fx:id="gridPane" hgap="5.0" prefHeight="579.0" prefWidth="1005.0" styleClass="derivation-hbox" vgap="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
         <Label fx:id="label" maxWidth="-Infinity" minHeight="16.0" minWidth="-Infinity" prefHeight="16.0" text="Base Color:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <ImageView id="note" fitHeight="400.0" fitWidth="340.0" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowSpan="10" GridPane.valignment="TOP">
+        <ImageView id="note" fitHeight="400.0" fitWidth="340.0" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowSpan="10" GridPane.valignment="TOP">
           <image>
             <Image url="@../images/note.png" />
           </image>
@@ -23,7 +23,7 @@
                   <Insets />
                </GridPane.margin>
         </ImageView>
-        <ImageView id="forward" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+        <ImageView id="forward" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.halignment="LEFT" GridPane.rowIndex="2">
           <image>
             <Image url="@../images/forward.png" />
           </image>
@@ -32,8 +32,8 @@
         <Slider fx:id="derivationSlider" min="-100.0" minWidth="-Infinity" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
         <Label fx:id="forwardDerivationLabel" prefWidth="50.0" text="0%" GridPane.columnIndex="2" GridPane.rowIndex="3" />
         <Label id="label3" text="Derived Result:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-        <Label id="label4" text="Desired Result Color:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-        <ImageView id="reverse" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="5">
+        <Label id="label4" text="Desired Color:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+        <ImageView id="reverse" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.halignment="LEFT" GridPane.rowIndex="5">
           <image>
             <Image url="@../images/reverse.png" />
           </image>
@@ -43,16 +43,16 @@
         <Label id="label7" text="Result Color:" GridPane.columnIndex="0" GridPane.rowIndex="8" />
         <Label fx:id="reverseResultLabel" prefHeight="21.0" prefWidth="250.0" text="#EEEEEE....." GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="8" />
         <Label fx:id="derivedResultLabel" text="Label" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="4" />
-        <ImageView fx:id="alert" fitHeight="91.0" fitWidth="349.0" visible="false" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.rowSpan="3">
+        <ImageView fx:id="alert" fitHeight="91.0" fitWidth="349.0" visible="false" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.rowSpan="3">
           <image>
             <Image url="@../images/alert.png" />
           </image>
         </ImageView>
       </children>
       <columnConstraints>
-        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" />
+        <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="110.0" minWidth="10.0" />
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="250.0" minWidth="10.0" prefWidth="250.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="40.0" minWidth="40.0" prefWidth="40.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -62,14 +62,14 @@
       </padding>
       <rowConstraints>
         <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="100.0" vgrow="ALWAYS" />
+        <RowConstraints maxHeight="40.0" minHeight="35.0" prefHeight="35.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="37.0" minHeight="10.0" prefHeight="23.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="35.0" minHeight="-Infinity" prefHeight="35.0" vgrow="SOMETIMES" />
         <RowConstraints maxHeight="40.0" minHeight="10.0" prefHeight="0.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="129.0" minHeight="10.0" prefHeight="23.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="92.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="37.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
         <RowConstraints maxHeight="40.0" minHeight="10.0" prefHeight="0.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="122.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="40.0" minHeight="10.0" prefHeight="0.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="40.0" minHeight="10.0" prefHeight="0.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="40.0" minHeight="10.0" prefHeight="0.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="SOMETIMES" />
         <RowConstraints maxHeight="102.0" minHeight="10.0" prefHeight="102.0" vgrow="SOMETIMES" />
         <RowConstraints maxHeight="85.0" minHeight="2.0" prefHeight="20.0" vgrow="SOMETIMES" />
       </rowConstraints>
