--- a/FXExperienceTools/src/main/resources/fxml/FXMLStylerPanel.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLStylerPanel.fxml
@@ -23,7 +23,7 @@
   <items>
     <AnchorPane id="ContentArea" fx:id="previewAnchorPane">
          <children>
-            <BorderPane fx:id="previewPane" prefHeight="630.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <BorderPane id="Border-pane" fx:id="previewPane" prefHeight="630.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children></AnchorPane>
       <AnchorPane maxWidth="300.0" minHeight="500.0" minWidth="-Infinity" prefHeight="500.0" prefWidth="300.0">
          <children>
