--- a/FXExperienceTools/src/main/resources/styles/main.css
+++ b/FXExperienceTools/src/main/resources/styles/main.css
@@ -70,7 +70,7 @@ different terms and without source code for the larger work.
     -fx-text-fill: derive(rgb(147, 147, 147), -70%)
 }
 .menu-button menu showing {
-    -fx-background-color: derive(rgb(147, 147, 147),60%); 
+    -fx-background-color: derive(rgb(147, 147, 147),-26%); 
 }
 .context-menu {
     -fx-skin: "com.sun.javafx.scene.control.skin.ContextMenuSkin";
@@ -129,7 +129,8 @@ different terms and without source code for the larger work.
 /* ==== SWITCH STYLED CHECKBOX ============================================== */
 .switch .box{
     -fx-background-color: transparent;
-    -fx-padding: 16 53 0 0;
+    -fx-focus-color: transparent;
+    -fx-padding: 16 28 0 0;
     -fx-background-image: url("/images/off.png");
 }
 .switch:selected .box {
@@ -138,7 +139,7 @@ different terms and without source code for the larger work.
 }
 .switch:focused .box{
     -fx-background-color: -fx-focus-color;
-    -fx-padding: 16 53 0 0;
+    -fx-padding: 16 28 0 0;
     -fx-background-image: url("/images/off.png");   
     -fx-background-insets: -1.4;
     -fx-background-radius: 3;
