--- a/FXExperienceTools/src/main/resources/styles/main.css
+++ b/FXExperienceTools/src/main/resources/styles/main.css
@@ -14,6 +14,7 @@ different terms and without source code for the larger work.
 .root {
   -fx-background-color: derive(rgb(122, 122, 122), -60%);
   -fx-focus-color: rgb(147, 147, 147);
+  
 }
 
 .nav-box {
@@ -31,7 +32,7 @@ different terms and without source code for the larger work.
     -fx-padding: 0.333333em 0.666667em 0.333333em 0.666667em; 
 }
 
-.menu:show-mnemonics > .mnemonic-underline {
+.menu-item:show-mnemonics > .mnemonic-underline {
     -fx-stroke: -fx-text-base-color;
 }
 .menu:hover,
@@ -40,7 +41,7 @@ different terms and without source code for the larger work.
     -fx-background-color:  derive(rgb(147, 147, 147), -26%);
      
 } 
-.menu-bar {
+.main-menu {
   -fx-background-color: derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), 40%), rgb(147, 147, 147);
     -fx-background-insets: 0 0 -1 0, 0, 1 0 0 0, 2 0 0 0; 
     -fx-padding: 0.385em 0.692em 0.231em 0.692em;
@@ -74,7 +75,6 @@ different terms and without source code for the larger work.
 }
 .context-menu {
     -fx-skin: "com.sun.javafx.scene.control.skin.ContextMenuSkin";
-     -fx-text-fill: derive(rgb(147, 147, 147), -70%);
      -fx-background-color: derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), 40%), rgb(147, 147, 147);
 /*    -fx-background-insets: 0, 1, 2;*/
    
@@ -130,7 +130,7 @@ different terms and without source code for the larger work.
 .switch .box{
     -fx-background-color: transparent;
     -fx-focus-color: transparent;
-    -fx-padding: 16 28 0 0;
+    -fx-padding: 17 53 0 0;
     -fx-background-image: url("/images/off.png");
 }
 .switch:selected .box {
@@ -139,7 +139,7 @@ different terms and without source code for the larger work.
 }
 .switch:focused .box{
     -fx-background-color: -fx-focus-color;
-    -fx-padding: 16 28 0 0;
+    -fx-padding: 17 53 0 0;
     -fx-background-image: url("/images/off.png");   
     -fx-background-insets: -1.4;
     -fx-background-radius: 3;
@@ -177,6 +177,6 @@ different terms and without source code for the larger work.
 /*    -fx-background-color: #0011114D;*/
     -fx-background-radius: 6, 6, 6, 6;
     -fx-background-insets: 6, 6, 6, 6;
-    -fx-text-fill: #cccc00;
+   
 }
 
